# model2vec-rs

./: Cargo.toml
src/: model.rs
