[package]
name = "model2vec-rs"
version = "0.1.3"
edition = "2021"
description = "Official Rust Implementation of Model2Vec"
readme = "README.md"
license-file = "LICENSE"
authors = ["Thomas van Dongen <thomas123@live.nl>", "Stéphan Tulkens <stephantul@gmail.com>"]
homepage = "https://github.com/MinishLab/model2vec-rs"
repository = "https://github.com/MinishLab/model2vec-rs"
keywords = ["embeddings", "model2vec", "nlp", "rust"]
categories = ["science", "text-processing"]

exclude = ["tests/*"]

[features]
default      = ["onig"]
onig         = ["tokenizers/onig",
                "tokenizers/progressbar",
                "tokenizers/esaxx_fast",
                "tokenizers/http"]

fancy-regex  = ["tokenizers/fancy-regex",
                "tokenizers/progressbar",
                "tokenizers/esaxx_fast",
                "tokenizers/http"]

[dependencies]
tokenizers = { version = "0.21", default-features = false }
safetensors = "0.5"
ndarray = "0.15"
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
half = "2.0"
log = "0.4"

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"
